# FEM-optimization-of-stator-geometries

./: CMakeLists.txt  README.md  git_tests.ipynb  pyproject.toml  requirements.txt
.claude/: settings.json
FEA/: FEA_INSTRUCTION.md  fea.md  pyproject.toml
FEA/configs/: default.yaml  fast_sweep.yaml  high_fidelity.yaml
FEA/fea_pipeline/: __init__.py  orchestrator.py
FEA/fea_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FEA/fea_pipeline/electromagnetic/: boundary_conditions.py  loss_calculator.py  material_library.py  postprocessor.py  solver.py
FEA/fea_pipeline/io/: mesh_reader.py  result_writer.py  schema.py
FEA/fea_pipeline/structural/: boundary_conditions.py  load_mapper.py  postprocessor.py  solver.py
FEA/fea_pipeline/thermal/: boundary_conditions.py  heat_sources.py  postprocessor.py  solver.py
FEA/fea_pipeline/utils/: interpolation.py  mesh_utils.py  units.py
FEA/tests/: conftest.py
FEA/tests/fixtures/expected_outputs/: em_reference.json  structural_reference.json  thermal_reference.json
FEA/tests/integration/: test_em_to_thermal_coupling.py  test_full_pipeline.py  test_thermal_to_structural_coupling.py
FEA/tests/unit/: test_em_solver.py  test_mesh_reader.py  test_structural_solver.py  test_thermal_solver.py
FEA/tests/validation/: NAFEMS_structural.py  NIST_thermal_block.py  TEAM_benchmark_7.py
GA/: ga.md  ga_description.md
GA/ga_optimizer/: __init__.py  chromosome.py  constraints.py  objectives.py  orchestrator.py  population.py
GA/ga_optimizer/configs/: default_ga.yaml  fast_ga.yaml
GA/ga_optimizer/evaluation/: cache.py  evaluator.py
GA/ga_optimizer/io/: checkpoint.py  result_writer.py
GA/ga_optimizer/operators/: crossover.py  mutation.py  repair.py  selection.py
GA/ga_optimizer/pareto/: archive.py  nsga2.py
GA/ga_optimizer/tests/integration/: test_full_ga_fast.py
GA/ga_optimizer/tests/unit/: test_cache.py  test_chromosome.py  test_metrics.py  test_nsga2.py  test_operators.py
GA/ga_optimizer/utils/: logger.py  metrics.py
bindings/: python_bindings.cpp
chain/: agent.md
csrc/: batch_scheduler.c  export_engine.c  geometry_builder.c  gmsh_backend.c  mesh_generator.c  params.c  topology_registry.c
examples/: batch_scheduler.py  batch_scheduler_c.c  single_geometry.md  single_geometry.py  single_geometry_c.c
include/stator/: batch_scheduler.hpp  export_engine.hpp  geometry_builder.hpp  gmsh_backend.hpp  mesh_generator.hpp  params.hpp  topology_registry.hpp
include/stator_c/: batch_scheduler.h  common.h  export_engine.h  geometry_builder.h  gmsh_backend.h  mesh_generator.h  params.h  topology_registry.h
ptest/: CMakeLists.txt  main.cpp
python/: pyproject.toml  setup.py
python/stator_pipeline/: __init__.py  pipeline.py  pipeline_c.py
python/stator_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: batch_scheduler.cpp  export_engine.cpp  geometry_builder.cpp  gmsh_backend.cpp  mesh_generator.cpp  params.cpp  smp.c  topology_registry.cpp
stator_pipeline/: __init__.py  batch_scheduler.py  export_engine.py  geometry_builder.py  gmsh_backend.py  mesh_generator.py  params.py  pipeline.py  topology_registry.py  visualiser.py
tests/: integration_test.c  integration_test.cpp  test_python_bindings.py  test_stator.c  test_stator.cpp  test_stator.py
